use new stream to list collection shortcut